[package]
name = "spawn-pidfd"
version = "0.1.0"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.62"
lazy_static = "1.4.0"

[build-dependencies]
bindgen = "0.51.1"
