[package]
name = "spawn-pidfd"
version = "0.1.0"
authors = ["Aaron Hill <aa1ronham@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.66",  features = ["const-extern-fn"] }
lazy_static = "1.4.0"
